add image and contact links

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     <title>David Kanwisher</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
     <!-- Custom Fonts -->
-    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
 
     <!-- Plugin CSS -->
-    <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
+    <link href="magnific-popup.css" rel="stylesheet">
 
     <!-- Theme CSS -->
     <link href="css/creative.min.css" rel="stylesheet">
@@ -91,6 +91,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Pleased to meet you</h2>
                     <hr class="light">
+                    <img src="img/davidheadshot.jpg" id="headshot" width="100" height="100">
                     <p class="text-faded"> I'm an up and coming web developer in the Charlotte area. I have experience in HTML5, CSS3, and Bootstrap. Previously, I worked as the Service Manager for the 3rd largest pest control company in the country. Lightning struck and a new passion was discovered: Creating dynamic and beautiful websites and applications. I graduated with honors from the University of North Carolina at Charlotte with a degree in Business Administration with a concentration in Marketing. I spend my free time coding, learning new web technologies and spending time with my family. I am currently working on projects, but I'm open to new work and opportunities!</p>
                     <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>
                 </div>
@@ -300,20 +301,28 @@
                     <i class="fa fa-envelope-o fa-3x sr-contact"></i>
                     <p><a href="mailto:kanwisher@gmail.com">kanwisher@gmail.com</a></p>
                 </div>
+                 <div id="icons" class="col-lg-8 col-lg-offset-2 text-center">
+                    <a href="https://github.com/kanwisher"> <img src="img/githublogo.svg" alt="github" height="55" width="75"></a>
+                    <a href="https://www.linkedin.com/in/david-kanwisher-a90792129"><img src="img/linkedinlogo.svg" alt="Linkedin" height="55" width="75"></a>
+                    <a href="https://twitter.com/_kanwisher"><img src="img/twitterlogo.svg" alt="Twitter" height="55" width="75"></a>
+                </div>
             </div>
+           
         </div>
     </section>
 
+
+	<script src="https://use.fontawesome.com/8c473066d9.js"></script>
     <!-- jQuery -->
-    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
     <!-- Plugin JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-    <script src="vendor/scrollreveal/scrollreveal.min.js"></script>
-    <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
+    <script src="scrollreveal.js"></script>
+    <script src="jquery.magnific-popup.js"></script>
 
     <!-- Theme JavaScript -->
     <script src="js/creative.min.js"></script>
